# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  01 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: rewrote the emerge
  search code, making it fully API-compliant and much more streamlined and
  compact.  This rewrite should fix the problem where emerge search doesn't
  support Portage overlays (bug #5783.)
  
  31 Jul 2002; Phil Bordelon <sunflare@gentoo.org> emerge.1: Documented the
  fact that emerge clean does not remove unslotted ebuilds.  Bumped the man
  page revision number to 2.0.22.

*portage-2.0.22 (29 Jul 2002)

  29 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fetch() didn't
  handle resuming downloads properly when the first attempt aborted
  prematurely.  The fall back to the alternate location would not resume the
  download.  This should now be fixed.  Closes bug #5655.
  
  29 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, ebuild.sh: I
  had some code in spawn() from one of Azarah's patches that I forgot to
  remove; it caused the sandbox to be disabled all the time.  I removed this
  code, and then I tweaked ebuild.sh so that the sandbox runs in a "deny by
  default" configuration.  Before, you could add lines to the main ebuild
  (outside of a function) and it would bypass the sandbox; no more.  Closes
  bugs #5740, #5744.
  
  29 Jul 2002; Daniel Robbins <drobbins@gentoo.org> emerge: --help and
  --version now work for non-root users as they should.  --clean has been
  deprecated.  This closes bug #5658.

*portage-2.0.21 (28 Jul 2002)

  28 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: Added
  beta "Portage tree overlay" support.  By setting PORTDIR_OVERLAY to point to
  a local directory tree, you can cause Portage to look for ebuilds in
  PORTDIR_OVERLAY first before consulting the regular PORTDIR.  Using this
  feature, it's possible to have your PORTDIR set up to rsync but still be able